--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>This is FRONTEND</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100&family=Montserrat:wght@100;300&family=Poppins:wght@100&family=Tangerine&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div id="root"></div>
+	<div id="root">
+		<section>
+			<button>A</button>
+		</section>
+	</div>		
 </body>
 </html>
